<resources>
    <string name="app_name" translatable="false">Projekat1</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="jira_system_for_raf_students">Jira system for Raf students</string>
    <string name="log_out">Log out</string>
    <string name="enhancment">Enhancment</string>
    <string name="bugs">Bugs</string>
    <string name="in_progress">In progress</string>
    <string name="raf_jira_statistics">Raf Jira statistics</string>
    <string name="statistics">Statistics</string>
    <string name="new_text">New</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="ticket_title">Ticket title</string>
    <string name="ticket_description">Ticket description</string>
    <string name="add_new_ticket">Add new ticket</string>
    <string name="search">Search...</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="ticket_type">Ticket type</string>
    <string name="priority">Priority</string>
    <string name="estimation">Estimation</string>
    <string name="logged_time">Logged time</string>
    <string name="ticket_desc">Ticket desc.</string>
    <string name="edit">Edit</string>

    <!--    SPINNER ELEMENTS    -->
    <string-array name="ticket_type">
        <item>Type</item>
        <item>Bug</item>
        <item>Enhancement</item>
    </string-array>

    <string-array name="priority">
        <item>Priority</item>
        <item>Highest</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Lowest</item>
    </string-array>

</resources>